[package]
name = "manga"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.19"
futures = "0.3.30"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
